# meeting-room-booking

./: .env.example  .gitignore  app.db  init_data.py  pyproject.toml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  bookings.py  rooms.py
app/core/: config.py  database.py  dependencies.py  security.py
app/models/: __init__.py  booking.py  room.py  timeslot.py  user.py
app/schemas/: booking.py  room.py  user.py
app/services/: booking_service.py
migrations/: env.py
migrations/versions/: b9dbab5b0d9b_initial_models.py
