[project]
name = "meeting-room-booking"
version = "0.1.0"
description = ""
authors = [
    {name = "Anna_Stepakina",email = "senior.contstantinov@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.138.2,<0.139.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "aiosqlite (>=0.22.1,<0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "black (>=26.5.1,<27.0.0)",
    "ruff (>=0.15.20,<0.16.0)",
    "mypy (>=2.1.0,<3.0.0)"
]
